// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`almost eligible but for class A/B discipline > requirements met 1`] = `
[
  {
    "text": "Currently on eligible custody level: minimum",
    "tooltip": "Currently on minimum or community custody",
  },
  {
    "text": "Has 30 or fewer months remaining on term: 30 months remaining on sentence",
    "tooltip": "No more than thirty (30) months remaining on the term of imprisonment or, in the case of a split sentence, on the unsuspended portion, after consideration of any deductions that the resident has received and retained under Title 17-A, Sections 2302(1), 2305, and 23017-2311, if the commissioner, or designee, determines that the average statewide case load is no more than ninety (90) adult community corrections clients to one probation officer.",
  },
  {
    "text": "Has served minimum required time on term: Served at least 1/2 of sentence",
    "tooltip": "Served at least 1/2 of the term of imprisonment imposed or, in the case of a split sentence, at least 1/2 of the unsuspended portion, after consideration of any deductions that the prisoner has received and retained under Title 17A, section 2302, subsection 1; section 2305; section 2307; section 2308; section 2309; section 2310; or section 2311 if the term of imprisonment or, in the case of a split sentence, the unsuspended portion is 5 years or less.",
  },
  {
    "text": "No detainers, warrants, or other pending holds",
    "tooltip": "Must have no detainers, warrants, or other pending holds preventing participation in a community program as set out in Department Policy (AF) 23.1",
  },
]
`;

exports[`almost eligible but for class A/B discipline > requirements met 2`] = `
[
  {
    "text": "Needs 76 more days without a Class A or B discipline",
    "tooltip": "Must not have been found guilty of a Class A or B disciplinary violation within ninety (90) days of submitting the plan to be transferred to supervised community confinement or anytime thereafter prior to the scheduled transfer and must not have a Class A or B disciplinary report pending at the time of submitting the plan or scheduled transfer.",
  },
]
`;

exports[`almost eligible but for fraction of sentence served > requirements met 1`] = `
[
  {
    "text": "Currently on eligible custody level: minimum",
    "tooltip": "Currently on minimum or community custody",
  },
  {
    "text": "Has 30 or fewer months remaining on term: 35 months remaining on sentence",
    "tooltip": "No more than thirty (30) months remaining on the term of imprisonment or, in the case of a split sentence, on the unsuspended portion, after consideration of any deductions that the resident has received and retained under Title 17-A, Sections 2302(1), 2305, and 23017-2311, if the commissioner, or designee, determines that the average statewide case load is no more than ninety (90) adult community corrections clients to one probation officer.",
  },
  {
    "text": "No detainers, warrants, or other pending holds",
    "tooltip": "Must have no detainers, warrants, or other pending holds preventing participation in a community program as set out in Department Policy (AF) 23.1",
  },
  {
    "text": "No Class A or B disciplines pending or occurring in the past 90 days",
    "tooltip": "Must not have been found guilty of a Class A or B disciplinary violation within ninety (90) days of submitting the plan to be transferred to supervised community confinement or anytime thereafter prior to the scheduled transfer and must not have a Class A or B disciplinary report pending at the time of submitting the plan or scheduled transfer.",
  },
]
`;

exports[`almost eligible but for fraction of sentence served > requirements met 2`] = `
[
  {
    "text": "Currently 5 months away from minimum time served requirement",
    "tooltip": "Served at least 1/2 of the term of imprisonment imposed or, in the case of a split sentence, at least 1/2 of the unsuspended portion, after consideration of any deductions that the prisoner has received and retained under Title 17A, section 2302, subsection 1; section 2305; section 2307; section 2308; section 2309; section 2310; or section 2311 if the term of imprisonment or, in the case of a split sentence, the unsuspended portion is 5 years or less.",
  },
]
`;

exports[`almost eligible but for months remaining > requirements met 1`] = `
[
  {
    "text": "Currently on eligible custody level: community",
    "tooltip": "Currently on minimum or community custody",
  },
  {
    "text": "Has served minimum required time on term: Served at least 2/3 of sentence",
    "tooltip": "Served at least 2/3 of the term of imprisonment imposed or, in the case of a split sentence, at least 2/3 of the unsuspended portion, after consideration of any deductions that the prisoner has received and retained under Title 17A, section 2302, subsection 1; section 2305; section 2307; section 2308; section 2309; section 2310; or section 2311 if the term of imprisonment or, in the case of a split sentence, the unsuspended portion is more than 5 years.",
  },
  {
    "text": "No detainers, warrants, or other pending holds",
    "tooltip": "Must have no detainers, warrants, or other pending holds preventing participation in a community program as set out in Department Policy (AF) 23.1",
  },
  {
    "text": "No Class A or B disciplines pending or occurring in the past 90 days",
    "tooltip": "Must not have been found guilty of a Class A or B disciplinary violation within ninety (90) days of submitting the plan to be transferred to supervised community confinement or anytime thereafter prior to the scheduled transfer and must not have a Class A or B disciplinary report pending at the time of submitting the plan or scheduled transfer.",
  },
]
`;

exports[`almost eligible but for months remaining > requirements met 2`] = `
[
  {
    "text": "Has 30 or fewer months remaining on term: 41 months remaining on sentence",
    "tooltip": "No more than thirty (30) months remaining on the term of imprisonment or, in the case of a split sentence, on the unsuspended portion, after consideration of any deductions that the resident has received and retained under Title 17-A, Sections 2302(1), 2305, and 23017-2311, if the commissioner, or designee, determines that the average statewide case load is no more than ninety (90) adult community corrections clients to one probation officer.",
  },
]
`;

exports[`eligible with future x portion date 1`] = `
{
  "text": "Has 30 or fewer months remaining on term: 32 months remaining on sentence",
  "tooltip": "No more than thirty (30) months remaining on the term of imprisonment or, in the case of a split sentence, on the unsuspended portion, after consideration of any deductions that the resident has received and retained under Title 17-A, Sections 2302(1), 2305, and 23017-2311, if the commissioner, or designee, determines that the average statewide case load is no more than ninety (90) adult community corrections clients to one probation officer.",
}
`;

exports[`fully eligible > requirements met 1`] = `
[
  {
    "text": "Currently on eligible custody level: minimum",
    "tooltip": "Currently on minimum or community custody",
  },
  {
    "text": "Has 30 or fewer months remaining on term: 32 months remaining on sentence",
    "tooltip": "No more than thirty (30) months remaining on the term of imprisonment or, in the case of a split sentence, on the unsuspended portion, after consideration of any deductions that the resident has received and retained under Title 17-A, Sections 2302(1), 2305, and 23017-2311, if the commissioner, or designee, determines that the average statewide case load is no more than ninety (90) adult community corrections clients to one probation officer.",
  },
  {
    "text": "Has served minimum required time on term: Served at least 2/3 of sentence",
    "tooltip": "Served at least 2/3 of the term of imprisonment imposed or, in the case of a split sentence, at least 2/3 of the unsuspended portion, after consideration of any deductions that the prisoner has received and retained under Title 17A, section 2302, subsection 1; section 2305; section 2307; section 2308; section 2309; section 2310; or section 2311 if the term of imprisonment or, in the case of a split sentence, the unsuspended portion is more than 5 years.",
  },
  {
    "text": "No detainers, warrants, or other pending holds",
    "tooltip": "Must have no detainers, warrants, or other pending holds preventing participation in a community program as set out in Department Policy (AF) 23.1",
  },
  {
    "text": "No Class A or B disciplines pending or occurring in the past 90 days",
    "tooltip": "Must not have been found guilty of a Class A or B disciplinary violation within ninety (90) days of submitting the plan to be transferred to supervised community confinement or anytime thereafter prior to the scheduled transfer and must not have a Class A or B disciplinary report pending at the time of submitting the plan or scheduled transfer.",
  },
]
`;

exports[`requirements for half sentence served 1`] = `
{
  "text": "Has 30 or fewer months remaining on term: 30 months remaining on sentence",
  "tooltip": "No more than thirty (30) months remaining on the term of imprisonment or, in the case of a split sentence, on the unsuspended portion, after consideration of any deductions that the resident has received and retained under Title 17-A, Sections 2302(1), 2305, and 23017-2311, if the commissioner, or designee, determines that the average statewide case load is no more than ninety (90) adult community corrections clients to one probation officer.",
}
`;
